--- a/styles/main.css
+++ b/styles/main.css
@@ -27,9 +27,8 @@ a:hover {
 
 html,
 body {
-  height: 100%;
   font-family: "Courier New", Courier, monospace;
-  background: slategray; /* slategray; */
+  background: lightblue; /* lightblue; */
   color: black;
 }
 
@@ -44,16 +43,16 @@ img {
 }
 
 h1 {
-  font-size: 56px;
+  font-size: 52px;
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 28px;
   font-weight: bold;
 }
 
 h3 {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: bold;
 }
 
@@ -63,7 +62,7 @@ h2 {
 }
 
 li {
-  font-size: 16px;
+  font-size: 15px;
   text-align: left;
 }
 
@@ -79,7 +78,7 @@ time {
 
 p,
 strong {
-  font-size: 16px;
+  font-size: 15px;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -130,11 +129,10 @@ header {
   }
 }
 
-@media (min-width: 1200px) {
-  .container {
-    width: 1300px;
-    background-color: white;
-  }
+.container {
+  width: 1300px;
+  height: 100%;
+  background: white;
 }
 
 /*
@@ -153,4 +151,45 @@ header {
  */
 .mastfoot {
   color: rgba(255, 255, 255, 0.5);
+}
+
+
+
+
+
+
+table.paleBlueRows {
+  font-family: "Times New Roman", Times, serif;
+  border: 1px solid #FFFFFF;
+  width: 100%;
+  height: 200px;
+  text-align: center;
+  border-collapse: collapse;
+}
+table.paleBlueRows td, table.paleBlueRows th {
+  border: 1px solid #FFFFFF;
+  padding: 3px 2px;
+}
+table.paleBlueRows tbody td {
+  font-size: 16px;
+  padding-left: 10px;
+  text-align: left;
+}
+table.paleBlueRows thead {
+  background: #0B6FA4;
+  border-bottom: 5px solid #FFFFFF;
+}
+table.paleBlueRows thead th {
+  font-size: 17px;
+  font-weight: bold;
+  color: #FFFFFF;
+  text-align: center;
+  border-left: 2px solid #FFFFFF;
+}
+table.paleBlueRows thead th:first-child {
+  border-left: none;
+}
+
+table.paleBlueRows tfoot td {
+  font-size: 12px;
 }
