--- a/styles/main.css
+++ b/styles/main.css
@@ -1,196 +1,242 @@
-/*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #2d85ae;
-  text-decoration: underline;
-  margin-right: 5px;
+/* Variables */
+:root {
+  --top-bar-color: #6e7f80;
+  --middle-bar-color: #536872;
+  --bottom-bar-color: #708090;
+  --body-color: #f7f7f7;
+  --time-line-color: #36454f;
+  --white-text-color: whitesmoke;
+  --head-line-text-color: #566f7c;
+  --gray-text-color: #666;
 }
 
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: 0.05rem solid #fff;
-}
-
-/*
- * Base structure
- */
-
-html,
-body {
-  font-family: "Courier New", Courier, monospace;
-  background: lightblue; /* lightblue; */
-  color: black;
-}
-
+/* General styles */
 
 body {
-  display: -ms-flexbox;
-  display: flex;
-}
-
-img {
-  margin-left: 10px;
+  background: var(--body-color);
 }
 
 h1 {
-  font-size: 52px;
+  color: var(--white-text-color);
+  margin-bottom: 15px;
+  padding-top: 100px;
 }
 
 h2 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: var(--head-line-text-color);
+}
+
+.profile p {
+  color: var(--white-text-color);
+  padding-bottom: 15px;
+  margin: 0;
+}
+
+a.nav-link {
+  color: var(--time-line-color) !important;
+}
+
+a.nav-link:hover {
+  color: var(--white-text-color) !important;
+}
+
+/* Specific styles */
+
+.bottom-bar p {
+  color: var(--white-text-color);
+}
+
+.top-bar {
+  background-color: var(--top-bar-color);
+}
+.middle-bar {
+  background-color: var(--middle-bar-color);
+}
+.bottom-bar {
+  background-color: var(--bottom-bar-color);
+  padding: 20px;
+}
+
+.job-title {
   font-size: 28px;
-  font-weight: bold;
+  font-weight: 300;
+  color: hsla(0, 0%, 100%, 0.8);
+  margin-bottom: 15px;
 }
 
-h3 {
-  font-size: 24px;
-  font-weight: bold; 
+.profile {
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-h3,
-h2 {
-  text-align: left;
+.about {
+  background-color: bisque;
 }
 
-li {
-  font-size: 15px;
-  text-align: left;
+.wrapper {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-ul {
-  text-align: left;
-}
-/* Time */
-
-time {
-  text-align: left;
-  font-weight: bold;
-}
-
-p,
-strong {
-  font-size: 15px;
-  text-align: left;
-  font-family: Arial, Helvetica, sans-serif;
+.section {
+  box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
+  padding: 45px;
+  background: #fff;
+  margin-bottom: 45px;
+  border-radius: 2px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
 }
 
-/*
- * Header
- */
-header {
-  height: 20%;
-}
-.masthead {
-  margin-bottom: 2rem;
-  
+.timeline {
+  border-left: 3px solid var(--time-line-color);
+  border-bottom-right-radius: 2px;
+  border-top-right-radius: 2px;
+  position: relative;
+  padding: 0 30px;
+  margin-left: 280px;
 }
 
-.masthead-brand {
-  margin-bottom: 0;
+.timeline .item {
+  position: relative;
+  margin-bottom: 45px;
 }
 
-.nav-masthead .nav-link {
-  padding: 0.25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
-  background-color: transparent;
-  border-bottom: 0.25rem solid transparent;
+.timeline .place {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-size: 20px;
+  font-weight: 350;
+  color: var(--time-line-color);
 }
 
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, 0.25);
+.timeline .job-meta .time {
+  color: #8a8a8a;
 }
 
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
+.timeline .work-place {
+  position: relative;
 }
 
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+.timeline .employee {
+  position: absolute;
+  right: 0;
+  top: 2px;
+  color: #8a8a8a;
 }
 
-@media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
-  }
-  .nav-masthead {
-    float: right;
-  }
+.timeline .job-meta {
+  position: absolute;
+  left: -280px;
+  top: 0;
 }
 
-.container {
-  
-  height: 100%;
-  background: white;
+.timeline .job-meta .title {
+  font-size: 18px;
+  color: var(--time-line-color);
+  max-width: 220px;
 }
 
-/*
- * Cover
- */
-.cover {
-  padding: 0 1.5rem;
-}
-.cover .btn-lg {
-  padding: 0.75rem 1.25rem;
-  font-weight: 700;
+.timeline .job-description p {
+  color: var(--gray-text-color);
 }
 
-/*
- * Footer
- */
-.mastfoot {
-  color: rgba(255, 255, 255, 0.5);
+.font-italic {
+  font-style: italic !important;
 }
 
-
-
-
-
-
-table.paleBlueRows {
-  font-family: "Times New Roman", Times, serif;
-  border: 1px solid #FFFFFF;
-  width: 100%;
-  height: 200px;
-  text-align: center;
-  border-collapse: collapse;
+.mt-5,
+.my-5 {
+  margin-top: 3rem !important;
 }
-table.paleBlueRows td, table.paleBlueRows th {
-  border: 1px solid #FFFFFF;
-  padding: 3px 2px;
+.justify-content-around {
+  justify-content: space-around !important;
 }
-table.paleBlueRows tbody td {
+
+.technology {
+  font-weight: 500;
+  font-size: 18px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.image-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 180px;
+}
+
+.skill-tag {
+  box-shadow: 0 1px 4px 0rgba (0, 0, 0, 0.14);
+  padding: 6px 30px;
+  display: inline-block;
+  margin-right: 10px;
+  border: 1px solid #f5f5f5;
+  font-weight: 500;
+  margin-bottom: 15px;
   font-size: 16px;
-  padding-left: 10px;
-  text-align: left;
-}
-table.paleBlueRows thead {
-  background: #0B6FA4;
-  border-bottom: 5px solid #FFFFFF;
-}
-table.paleBlueRows thead th {
-  font-size: 17px;
-  font-weight: bold;
-  color: #FFFFFF;
-  text-align: center;
-  border-left: 2px solid #FFFFFF;
-}
-table.paleBlueRows thead th:first-child {
-  border-left: none;
+  color: var(--gray-text-color);
 }
 
-table.paleBlueRows tfoot td {
-  font-size: 12px;
+.level {
+  color: #8a8a8a;
+  margin-bottom: 15px;
 }
 
+.bottom-skills {
+  margin-top: 50px;
+}
+
+.icon-link {
+  margin: 5px;
+}
+
+.profile-image {
+  width: 120px;
+  height: 120px;
+  position: absolute;
+  left: 30px;
+}
+
+.intro {
+  position: relative;
+  padding: 30px 30px 30px 190px;
+  font-size: 16px;
+  color: var(--gray-text-color);
+}
+
+/* Conditional styles */
+@media (max-width: 767px) {
+  .timeline .job-meta {
+    position: static;
+    margin-bottom: 15px;
+  }
+  .timeline {
+    margin-left: 0;
+    padding-right: 0;
+  }
+
+  .image-center {
+    height: 60px !important;
+  }
+
+  .profile-image {
+    position: static !important;
+    margin: 0 auto 30px;
+    text-align: center;
+  }
+
+  .intro {
+    padding: 0 !important;
+  }
+}
+
+@media (max-width: 274px) {
+  .image-center {
+    display: none !important;
+  }
+}
